--- a/src/app/posts/47.md
+++ b/src/app/posts/47.md
@@ -46,4 +46,4 @@ Os esforços de convergência sindical são urgentes, precisamente quando a dire
 *Guadalupe Simões - Sindicalista, dirigente do Sindicato dos Enfermeiros Portugueses e do Conselho Nacional da CGTP-IN*
 *Ulisses Garrido – sindicalista, dirigente da PRAXIS, ex-Executivo da CGTP-IN e ex-diretor do Instituto Sindical Europeu*
 
-*Publicado originalmente no Jornal de Negócios a 31 de agosto de 2025*
+*Publicado originalmente no Público a 31 de agosto de 2025*
