--- a/src/app/posts/33.md
+++ b/src/app/posts/33.md
@@ -73,5 +73,5 @@ Palavras para quê? Isto não é revisitar a lei, isto é sabotar o que vinha a 
 Creio que a melhor opção – a mais equilibrada, no atual contexto – passaria por simplificar e clarificar os requisitos e o funcionamento da arbitragem, nesta sede, não a de desfazer todo esse delicado sistema e abrir uma autêntica autoestrada para a caducidade da convenção, que termina num precipício. Até porque não é difícil prever quem irá cair nesse precipício…
 
 
-**NOTA: Este artigo de João Leal Amado é publicado conjuntamente pelo Em Causa, pela revista Que Força É Essa - Revista sobre os Mundos do Trabalho e pelo site [Práxis - Reflexão e Debate sobre Trabalho e Sindicalismo](https://praxis.pt/)**
+**NOTA: Este artigo de João Leal Amado é publicado conjuntamente pelo Em Causa, pela revista Que Força É Essa - Revista sobre os Mundos do Trabalho e pelo site [Práxis - Reflexão e Debate sobre Trabalho e Sindicalismo](https://praxis.org.pt)**
 
