--- a/src/app/posts/51.md
+++ b/src/app/posts/51.md
@@ -14,7 +14,7 @@ Desde logo, tal “Anteprojeto”, ao corresponder aos desejos dos sectores patr
 
 Depois, e como o Governo já deixou claro, estas novas e desastrosas medidas avançarão aconteça o que acontecer em sede de Concertação Social, mesmo que, para a sua aprovação, o PSD precise dos votos não só da Iniciativa Liberal, como também (e sobretudo) do Chega, evidenciando, uma vez mais, que o enfatuado “Não é não!” se transformou rapidamente num “sim” cada vez menos envergonhado.
 
-Por fim, e como tantas vezes sucede neste tipo de ofensivas, a chamada “reforma da legislação laboral” é apresentada envolta no brilho enganador de expressões pós-modernas e no recurso a argumentos que, embora aparentemente sedutores, são falaciosos e até manifestamente falsos. Assim, assistimos ao habitual desfile de chavões ditos com muita pompa e circunstância, mas com pouco ou nenhum conteúdo real, como “flexibilidade” ou “flexibilização”, “necessidade de adaptação”, “combate à segmentação”, “recusa dos preconceitos ideológicos”, “eficiência”, “competitividade”, “criação de valor”, “renovação das empresas”, “simplificação” e “desburocratização”, entre outros. São, aliás, exemplos claros desse estilo o _powerpoint_ de apresentação do “Anteprojeto”<sup>[\[1\]](#footnote-1)</sup>, realizado no passado dia 24/03, e o artigo intitulado “O trabalho que o século XXI reclama”, assinado pela própria Ministra do Trabalho, Maria do Rosário Palma Ramalho, e publicado no _Público_ no passado dia 06/09.
+Por fim, e como tantas vezes sucede neste tipo de ofensivas, a chamada “reforma da legislação laboral” é apresentada envolta no brilho enganador de expressões pós-modernas e no recurso a argumentos que, embora aparentemente sedutores, são falaciosos e até manifestamente falsos. Assim, assistimos ao habitual desfile de chavões ditos com muita pompa e circunstância, mas com pouco ou nenhum conteúdo real, como “flexibilidade” ou “flexibilização”, “necessidade de adaptação”, “combate à segmentação”, “recusa dos preconceitos ideológicos”, “eficiência”, “competitividade”, “criação de valor”, “renovação das empresas”, “simplificação” e “desburocratização”, entre outros. São, aliás, exemplos claros desse estilo o _powerpoint_ de apresentação do “Anteprojeto”[\[1\]](#footnote-1), realizado no passado dia 24/03, e o artigo intitulado “O trabalho que o século XXI reclama”, assinado pela própria Ministra do Trabalho, Maria do Rosário Palma Ramalho, e publicado no _Público_ no passado dia 06/09.
 
 **“Nova” reforma laboral, velha lógica neo-liberal**
 
@@ -42,7 +42,7 @@ Estas foram as medidas adoptadas na Europa no final dos anos 70 e, entre nós, n
 
 E aquilo que o Governo de Luís Montenegro se prepara para fazer – e já afirmou que o fará, mesmo sem o apoio da Concertação Social – é, desde logo, um grande ataque ao direito à greve, procurando esvaziá-lo completamente de conteúdo através, nomeadamente, da fixação de serviços mínimos obrigatórios em todas as situações, que podem, afinal, transformar-se em verdadeiros serviços máximos.
 
-Virá também a revisão dos actuais regimes de férias, com a chamada “compra” de dias de férias<sup>[\[2\]](#footnote-2)</sup>, do teletrabalho e do banco de horas. E, sob a invocação do combate à subsídio-dependência e da necessidade de incentivos ao trabalho, surgirá um aperto muito significativo no acesso aos subsídios de doença e de desemprego e, sobretudo, ao RSI – sempre sob a lógica de que, se os trabalhadores não trabalham, é porque não querem, porque são ociosos e preguiçosos, porque estão a tirar o lugar aos mais jovens e, por isso, não mereceriam sequer receber tais apoios sociais<sup>[\[3\]](#footnote-3)</sup>.
+Virá também a revisão dos actuais regimes de férias, com a chamada “compra” de dias de férias[\[2\]](#footnote-2), do teletrabalho e do banco de horas. E, sob a invocação do combate à subsídio-dependência e da necessidade de incentivos ao trabalho, surgirá um aperto muito significativo no acesso aos subsídios de doença e de desemprego e, sobretudo, ao RSI – sempre sob a lógica de que, se os trabalhadores não trabalham, é porque não querem, porque são ociosos e preguiçosos, porque estão a tirar o lugar aos mais jovens e, por isso, não mereceriam sequer receber tais apoios sociais[\[3\]](#footnote-3).
 
 **Nenhuma reversão do que é negativo**
 
@@ -86,9 +86,9 @@ Na mesma linha de intervenção, o “Anteprojeto” procura, claramente, dificu
 
 Assim, elimina os factos-base da actual presunção do art.º 12º-A e remete para um absolutamente ultrapassado art.º 12º, que desconhece em absoluto as novas formas de organização e de prestação de trabalho dependente determinadas pelas novas tecnologias, em particular da época digital. E produz a falácia de, esquecendo propositadamente todos os verdadeiros e reais indícios da laboralidade (como o facto de o prestador não ter estrutura empresarial própria e inserir a sua actividade em estrutura alheia, que é quem fixa os preços dos serviços e a remuneração do prestador), introduzir no mesmo art.º12º-A, n.º 2, um pseudo-novo indício que, fazendo apelo a algumas das características próprias do trabalho nas ditas plataformas, que passam por alguma “liberdade operacional” dos respectivos trabalhadores, aponta afinal para a inexistência de contrato de trabalho!?
 
-O que o “Anteprojeto” do Governo faz neste campo é satisfazer o patronato das multinacionais das plataformas<sup>[\[4\]](#footnote-4)</sup>, não hesitando, para tal, em recorrer ao artifício e, mesmo, à fraude à lei relativamente à Directiva Comunitária, cuja transposição, aliás, Portugal tinha antecipado com a Lei n.º 13/2023, de 03/04, através da introdução do supracitado art.º 12º-A.
+O que o “Anteprojeto” do Governo faz neste campo é satisfazer o patronato das multinacionais das plataformas[^4], não hesitando, para tal, em recorrer ao artifício e, mesmo, à fraude à lei relativamente à Directiva Comunitária, cuja transposição, aliás, Portugal tinha antecipado com a Lei n.º 13/2023, de 03/04, através da introdução do supracitado art.º 12º-A.
 
-Mas há mais ainda! Depois de, pelo n.º 3 do actual art.º 337º, ao estabelecer a nulidade de tal tipo de cláusulas, se ter procurado pôr termo ao escândalo das declarações abdicativas de tudo e mais alguma coisa, isto é, de todos e quaisquer créditos (passados, presentes e futuros) relativos à entidade empregadora, a outras empresas do grupo e até a gerentes e administradores, que os trabalhadores eram frequentemente constrangidos a assinar<sup>[\[5\]](#footnote-5)</sup> para poderem receber os créditos legalmente devidos (como os relativos a férias, subsídios e respectivos proporcionais e até indemnizações legais), o “Anteprojeto” vem agora admitir as mesmas declarações abdicativas, desde que a assinatura do trabalhador seja notarialmente reconhecida, como se tal formalidade fosse impeditiva de qualquer daqueles abusos.
+Mas há mais ainda! Depois de, pelo n.º 3 do actual art.º 337º, ao estabelecer a nulidade de tal tipo de cláusulas, se ter procurado pôr termo ao escândalo das declarações abdicativas de tudo e mais alguma coisa, isto é, de todos e quaisquer créditos (passados, presentes e futuros) relativos à entidade empregadora, a outras empresas do grupo e até a gerentes e administradores, que os trabalhadores eram frequentemente constrangidos a assinar[\[5\]](#footnote-5) para poderem receber os créditos legalmente devidos (como os relativos a férias, subsídios e respectivos proporcionais e até indemnizações legais), o “Anteprojeto” vem agora admitir as mesmas declarações abdicativas, desde que a assinatura do trabalhador seja notarialmente reconhecida, como se tal formalidade fosse impeditiva de qualquer daqueles abusos.
 
 **Formação Profissional** – Também muito significativamente, e desmentindo a propaganda governamental da aposta no reforço da qualificação do trabalho, o “Anteprojeto” reduz (art.º 131º, n.º 2) para metade (20) o número de horas de formação contínua a que o trabalhador tem direito nas empresas com menos de 10 trabalhadores.
 
@@ -96,7 +96,7 @@ Mas há mais ainda! Depois de, pelo n.º 3 do actual art.º 337º, ao estabelece
 
 Estes são aspectos aparentemente pontuais, ou até de menor relevância, mas que têm o condão de evidenciar ainda mais a obsessão patronal assumida pelo Governo em retirar e liquidar direitos dos trabalhadores e ajustar contas com estes e com as suas conquistas, reduzindo-os à condição de autênticos servos. E que, aliás, serviram para o Governo, depois de os anunciar e defender publicamente, vir manifestar “disponibilidade” para os alterar, numa claríssima manobra destinada a desviar as atenções dos pontos essenciais.
 
-**Extinção da criminalização do trabalho não declarado e recibos verdes** – Para que dúvidas não restem acerca do que os patrões e o Governo entendem por “combate à precariedade laboral”, de que fala a “Exposição de Motivos”, o “Anteprojeto” também põe fim à criminalização – introduzida em 2023 no Regime Geral das Infracções Tributárias – do trabalho não declarado. Trata-se de uma realidade onde não entram nem leis, nem Tribunais do Trabalho, nem ACT, e que, segundo o próprio Observatório de Economia e Gestão da Fraude da Faculdade de Economia do Porto, representará entre 25% e 35% de todo o PIB português<sup>[\[6\]](#footnote-6)</sup>.
+**Extinção da criminalização do trabalho não declarado e recibos verdes** – Para que dúvidas não restem acerca do que os patrões e o Governo entendem por “combate à precariedade laboral”, de que fala a “Exposição de Motivos”, o “Anteprojeto” também põe fim à criminalização – introduzida em 2023 no Regime Geral das Infracções Tributárias – do trabalho não declarado. Trata-se de uma realidade onde não entram nem leis, nem Tribunais do Trabalho, nem ACT, e que, segundo o próprio Observatório de Economia e Gestão da Fraude da Faculdade de Economia do Porto, representará entre 25% e 35% de todo o PIB português[\[6\]](#footnote-6).
 
 E mais: os trabalhadores a recibos verdes que eram considerados, para efeitos da protecção laboral e social (prevista no art.º 10º do Código, e nos termos do art.º 140º da Lei nº 110/2009), como juridicamente independentes mas economicamente dependentes quando tivessem 50% dos seus rendimentos anuais pagos pela mesma entidade, passam agora (nº 2 do art.º 10º do “Anteprojeto”) a beneficiar dessa protecção apenas se essa percentagem for de 80%.
 
@@ -104,11 +104,11 @@ Não contente com tudo isto, o Governo pretende introduzir, a propósito da acç
 
 **Estatuto da ACT** – E, também, o que se prevê com a revogação dos nºs. 3 e 4 do art.º 11º da Lei nº 102/2001 é a extinção do mecanismo de intervenção da Autoridade para as Condições do Trabalho (ACT), através do qual o Inspector do Trabalho, ao detectar indícios de um despedimento ilícito, notificava a entidade patronal e, na falta de regularização, comunicava o facto ao Ministério Público.
 
-Convém referir, ainda e uma vez mais, que em nenhuma das ocasiões em que foram aplicadas (em particular no Código do Trabalho de 2003 e nas reformas laborais da Tróica) as receitas neo-liberais produziram qualquer aumento, quer do emprego, quer da qualidade do trabalho, quer da produtividade, que, aliás, é um problema dos patrões e da falta de investimento produtivo<sup>[\[7\]](#footnote-7)</sup>.
+Convém referir, ainda e uma vez mais, que em nenhuma das ocasiões em que foram aplicadas (em particular no Código do Trabalho de 2003 e nas reformas laborais da Tróica) as receitas neo-liberais produziram qualquer aumento, quer do emprego, quer da qualidade do trabalho, quer da produtividade, que, aliás, é um problema dos patrões e da falta de investimento produtivo[\[7\]](#footnote-7).
 
 **As graves omissões do “Anteprojeto”**
 
-Num país onde a sinistralidade laboral formalmente declarada ronda, há anos a fio, o escandaloso número de 200 mil de acidentes de trabalho por ano; onde se estima que os recibos verdes fraudulentos (disfarçando de meras prestações de serviços verdadeiras relações de trabalho subordinado, assim eximidas à aplicação das leis laborais) ascendam a cerca de meio milhão; onde o assédio moral no local de trabalho, puro e duro, é impunemente praticado como “ferramenta de gestão” e atinge mais de um milhão e meio de trabalhadores<sup>[\[8\]](#footnote-8)</sup>; e onde os salários são muito baixos (e, logo, também os custos salariais horários totais para as empresas, sendo, segundo o Eurostat, 18€ para Portugal, contra 34€ na UE-27 e 37€ na zona euro)... relativamente a todas estas autênticas chagas sociais, nem uma palavra – muito menos uma medida – se encontra, no “Anteprojeto” ou fora dele.
+Num país onde a sinistralidade laboral formalmente declarada ronda, há anos a fio, o escandaloso número de 200 mil de acidentes de trabalho por ano; onde se estima que os recibos verdes fraudulentos (disfarçando de meras prestações de serviços verdadeiras relações de trabalho subordinado, assim eximidas à aplicação das leis laborais) ascendam a cerca de meio milhão; onde o assédio moral no local de trabalho, puro e duro, é impunemente praticado como “ferramenta de gestão” e atinge mais de um milhão e meio de trabalhadores[\[8\]](#footnote-8); e onde os salários são muito baixos (e, logo, também os custos salariais horários totais para as empresas, sendo, segundo o Eurostat, 18€ para Portugal, contra 34€ na UE-27 e 37€ na zona euro)... relativamente a todas estas autênticas chagas sociais, nem uma palavra – muito menos uma medida – se encontra, no “Anteprojeto” ou fora dele.
 
 É, pois, forçoso concluir que a contra-reforma laboral em curso por parte do Governo da AD, com o apoio da IL e do Chega, visa, sob o argumento dos aumentos da produtividade, do emprego e da qualidade do trabalho – que nunca se verificaram com tal tipo de medidas! – enfraquecer e tolher a acção, a organização e a contratação colectivas; tornar mais baratos os despedimentos; facilitar a contratação precária; aumentar a dimensão e a desregulação dos horários de trabalho; dificultar (ainda mais) a conciliação da vida pessoal e familiar de quem trabalha com a sua vida profissional e com o exercício dos seus direitos de parentalidade; e viabilizar as operações de “externalização” para empresas sem contratação colectiva, sem o mínimo de condições de trabalho e até sem património.
 
