--- a/src/app/posts/48.md
+++ b/src/app/posts/48.md
@@ -2,18 +2,9 @@
 title: 'O trabalho que o século XXI dispensa'
 subtitle: ''
 date: '2025-09-14'
-author: 
+author: ["Henrique Sousa", "Joana Neto", "João Leal Amado", "José Soeiro", "Maria da Paz Campos Lima"]
 section: 'Contra-reforma laboral'
 ---
-
-*Henrique Sousa, investigador social e politólogo*
-*Joana Neto, professora universitária e juslaboralista*
-*João Leal Amado, professor universitário e juslaboralista*
-*José Soeiro, professor universitário e sociólogo*
-*Maria da Paz Campos Lima, professora universitária e socióloga*
-Membros dos órgãos da revista "Que Força É Essa -- Revista sobre os
-mundos do Trabalho"
-
 
 ![Créditos: LUSA](/images/48.jpeg)
 
