--- a/src/app/posts/57.md
+++ b/src/app/posts/57.md
@@ -602,9 +602,9 @@ igualdade de género.
 
 Catarina de Oliveira Carvalho[^1]
 
-Joana Nunes Vicente[^2]^∗^
+Joana Nunes Vicente[^2]
 
-Luísa Andias Gonçalves[^3]^∗∗^
+Luísa Andias Gonçalves[^3]
 
 [^1]: ^∗^ Professora associada da Universidade Católica Portuguesa,
     Faculdade de Direito -- Escola do Porto, CEID -- Centro de Estudos e
