--- a/src/app/posts/57.md
+++ b/src/app/posts/57.md
@@ -606,12 +606,12 @@ Joana Nunes Vicente[^2]
 
 Luísa Andias Gonçalves[^3]
 
-[^1]: ^∗^ Professora associada da Universidade Católica Portuguesa,
+[^1]: Professora associada da Universidade Católica Portuguesa,
     Faculdade de Direito -- Escola do Porto, CEID -- Centro de Estudos e
     Investigação em Direito, Portugal.
 
-[^2]: ^∗∗^ Professora auxiliar da Faculdade de Direito da Universidade
+[^2]: Professora auxiliar da Faculdade de Direito da Universidade
     de Coimbra -- Faculdade de Direito, IJ, Univ Coimbra
 
-[^3]: ^∗∗∗^ Professora auxiliar da Faculdade de Direito da Universidade
+[^3]: Professora auxiliar da Faculdade de Direito da Universidade
     de Coimbra -- Faculdade de Direito, IJ, Univ Coimbra
