--- a/src/app/posts/60.md
+++ b/src/app/posts/60.md
@@ -2,8 +2,8 @@
 title: 'A nova proposta do Governo à UGT: gozar com quem trabalha!'
 subtitle: 'Análise desenvolvida da proposta do Governo'
 date: '2025-12-24'
-author: "João Leal Amado"
-section: 'Plataformas Digitais'
+author: "Henrique Sousa"
+section: 'Contra-reforma Laboral'
 ---
 A proposta apresentada pela Ministra do Trabalho à UGT na reunião bilateral do passado dia 11 de Novembro, é mais uma vez reveladora de que este governo usa um simulacro de negociação para dar cobertura pública e mediática ao seu propósito firme de concretizar a mais grave contra-reforma laboral em várias décadas.
 
