--- a/src/app/posts/60.md
+++ b/src/app/posts/60.md
@@ -5,6 +5,29 @@ date: '2025-12-24'
 author: "Henrique Sousa"
 section: 'Contra-reforma Laboral'
 ---
+
+O Governo mantém todas as matérias fundamentais. São poucas e são migalhas as concessões aos sindicatos
+
+A última proposta apresentada pela Ministra do Trabalho à UGT na reunião bilateral do passado dia 11 de Novembro, é mais uma vez reveladora de que este governo usa um simulacro de negociação para dar cobertura pública e mediática ao seu propósito de concretizar o mais grave ataque aos direitos laborais desde a aprovação do Código do Trabalho de 2009 e de fazer o ajuste de contas com as reformas laborais de 2019 e de 2023 (a chamada Agenda do Trabalho Digno).
+
+**A proposta apresentada na reunião em nada mexe no núcleo duro do anteprojecto do governo apresentado há quase quatro meses na Concertação Social.** Recua em questões menos relevantes sem mexer nas suas "traves mestras" e acolhe várias propostas conhecidas da CIP. Para os sindicatos, é uma mão cheia de (quase) coisa nenhuma. A reunião bilateral do governo com a UGT realizada esta quarta-feira, dia 19 de Novembro, além da reafirmação da continuidade do processo negocial, nada de novo acrescentou à proposta antes apresentada pelo governo, nem modificou o "rotundo não" declarado pela UGT ao anteprojecto de revisão das leis laborais. Esta confederação sindical, como declarou à saída da reunião o seu secretário-geral, manteve a decisão de apresentar o pré-aviso de greve, juntando-se assim à CGTP-IN, para a greve geral de 11 de Dezembro.
+
+Das alterações propostas pelo governo em vinte e nove artigos do Código do Trabalho e de legislação conexa relativamente ao anteprojecto de revisão apresentado em Julho na Concertação Social, nove respeitam a alterações nas matérias da amamentação e aleitação e da protecção da parentalidade, em que já era previsível o recuo do Governo, e onde é mais fácil cederem, já que em nada alteram o ataque fundamental aos direitos laborais e às próprias famílias que reside no seu projecto de promoção da precariedade, desregulação de horários e facilitação dos despedimentos.
+
+**Parte das alterações representa a satisfação de exigências e interesses da CIP**, como se pode ver comparando com o parecer que esta entregou. O fim da proibição da acumulação de pensão antecipada de velhice com o exercício de actividade na mesma empresa durante três anos, facilitando a maior pressão dos empregadores para reformas antecipadas, que a CIP justifica com "reforçar a flexibilidade" e "redução de custos", e que lhes permite também poupar na TSU à custa da sobrecarga da Segurança Social (revogação do nº 3 artigo 62º do DL 1287/2007). O reforço do poder de decisão dos empregadores quando à aplicação das convenções colectivas de trabalho nas empresas (artigo 497º do CT). A exigência de a ACT se pronunciar no prazo de 30 dias sobre os pedidos de mudança de trabalhador para categoria inferior, implicando deferimento tácito quando ultrapassado esse período sem resposta (artigo 119º). A exigência de "acordo entre o empregador e o trabalhador" quanto ao pagamento em duodécimos dos subsídios de Natal e de férias, onde antes era apenas "a vontade expressa" do trabalhador que contava (artigos 263º e 264º). Ou ainda a alteração em vários artigos (seis) da obrigação patronal de informação laboral relevante ser divulgada em alternativa, ou por afixação física ou por publicação na intranet da empresa, em vez de ser conjunta. É também reforçado o poder unilateral dos empregadores de, por acto de gestão, estender a todos os trabalhadores uma determinada convenção colectiva de trabalho (artigo 497º) e também de pôr em causa a a aplicação de uma portaria de extensão (artigo 514º). A eliminação do banco de horas grupal, mantendo a proposta de recuperação do banco de horas individual, como quer a CIP, também reforça o carácter negativo do anteprojecto do governo neste domínio, promovendo ainda mais a desregulação dos horários (revogação do artigo 208º B). Esta defesa do banco de horas individual pela ministra contrasta aliás com a crítica que fez ao banco de horas individual em entrevista a um jornal em Julho de 2018, reconhecendo que a sua existência implicava "uma certa imposição" num contrato de trabalho em que há um subordinado.
+
+**São poucas e são migalhas as concessões aos sindicatos nesta proposta.** Reposição do que está na lei quanto a um número mínimo de 40 horas de formação contínua, que antes era reduzido para 20 horas nas microempresas (artigo 131º). Reintrodução do aumento do período de férias até 3 dias, no caso do trabalhador não ter faltado ou ter apenas faltas justificadas, mas, porque o diabo está nos detalhes, exigindo melhor esclarecimento que faltas justificadas e licenças legais contam ou não para o cálculo desta extensão de férias (artigo 238º). Retirada das médias empresas da projectada desprotecção dos trabalhadores nos processos de despedimento, que passaria a abranger micro e pequenas empresas (artigo 358º). E cereja no topo do bolo, aumento (!!!) da compensação por despedimento colectivo de 14 para 15 dias de retribuição por cada ano completo de trabalho (artigo 366º).
+
+**O Governo mantém todas as matérias fundamentais,** relativas à facilitação dos despedimentos, à extensão e generalização dos contratos a prazo no segundo país europeu com maior precariedade, à prática liquidação da presunção de laboralidade que dá acesso a um contrato de trabalho, à abdicação pelo trabalhador dos créditos a que tenha direito (a remissão abdicativa), à eliminação do direito de reintegração em caso de despedimento ilícito, à retoma do direito patronal de outsourcing após despedimento colectivo ou extinção do posto de trabalho, à reposição do banco de horas individual, às medidas de enfraquecimento da negociação colectiva e de destruição do sistema de arbitragens para limitar a caducidade; etc.; etc.
+
+**É já muito claro que o título Trabalho XXI dado ao anteprojecto não passa de operação de propaganda** para disfarçar a finalidade principal de generalizar a precariedade nas relações laborais, facilitar mais os despedimentos e enfraquecer ainda mais a negociação colectiva e os sindicatos. É a reforma laboral com que os patrões sonhavam e que o governo assume, com o apoio da extrema-direita. Que não encontra sequer suporte na situação económica ou no estado do emprego, habituais álibis para as receitas austeritárias. E que não constava do programa eleitoral com que a AD se apresentou às eleições, em que então prometiam "valorizar o trabalho e o emprego" e "valorizar a concertação social e o diálogo social", assim enganando os portugueses. Como fizeram com o SNS.
+
+O governo, desta vez, numa **clara ofensa à separação de funções entre a Concertação Social e o parlamento**, submeteu um anteprojecto de lei à discussão e à alteração na Concertação Social, quando deveria, como tem sido prática, apresentar à discussão neste órgão de diálogo social tripartido propostas de políticas e de medidas, não projectos legislativos sobre matéria laboral, que são matéria reservada da Assembleia da República. Mas para estes governantes vale tudo, incluindo a degradação e instrumentalização da Concertação Social e das instituições. Tudo revela a dimensão da ambição e da parada do governo e desta ministra e académica ultraliberal, arrogante e autoritária, que não desiste do sonho de associar o seu nome a uma reforma que enfraqueça o papel regulador do Direito do Trabalho e submeta inteiramente o trabalho e os trabalhadores aos mercados.
+
+**Esta é uma reforma aplaudida pelos patrões e contra os trabalhadores**. Valem todas as manobras, pressões e atropelos contra os sindicatos. A central de comunicação do governo trata do resto. E apesar disso, os trabalhadores e o movimento sindical resistem em defesa da dignidade e do valor do trabalho e dos trabalhadores. **A culpa da greve geral é do Governo.**
+
+----
+
 A proposta apresentada pela Ministra do Trabalho à UGT na reunião bilateral do passado dia 11 de Novembro, é mais uma vez reveladora de que este governo usa um simulacro de negociação para dar cobertura pública e mediática ao seu propósito firme de concretizar a mais grave contra-reforma laboral em várias décadas.
 
 **A proposta apresentada na reunião em nada mexe no núcleo duro do anteprojecto do governo (as "traves mestras") apresentado há quase quatro meses na Concertação Social. Nas alterações** **propostas em vinte e nove artigos do Código do Trabalho e de outras leis, comparativamente com o anteprojecto entregue em Julho na Concertação Social,** recuam em questões menos relevantes sem mexer nas suas "traves mestras" e acolhem várias propostas conhecidas da CIP. Para os sindicatos, é uma mão cheia de (quase) coisa nenhuma.
