--- a/src/app/posts/60.md
+++ b/src/app/posts/60.md
@@ -3,7 +3,7 @@ title: 'A nova proposta do Governo à UGT: gozar com quem trabalha!'
 subtitle: 'Análise desenvolvida da proposta do Governo'
 date: '2025-12-24'
 author: "Henrique Sousa"
-section: 'Contra-reforma Laboral'
+section: 'Contra-reforma laboral'
 ---
 
 O Governo mantém todas as matérias fundamentais. São poucas e são migalhas as concessões aos sindicatos
