--- a/src/app/posts/62.md
+++ b/src/app/posts/62.md
@@ -14,7 +14,7 @@ As leis laborais são uma ferramenta fundamental para garantir direitos básicos
 
 Apesar disso, o governo pretende reduzir fortemente a proteção laboral em Portugal. Fá-lo com base numa ideia caricata: a de que retirar-nos direitos faz-nos ser mais produtivos. Procurei quem tivesse feito prova de tal curiosidade, mas não encontrei. Encontrei, no entanto, vários motivos para recusarmos a proposta do governo. Deixo aqui cinco.
 
-**1\. Pagamento de Horas Extraordinárias:** O pacote laboral proposto pelo governo prevê que empregadores estipulem até 150 horas extraordinárias por ano através de um banco de horas individual, que [não necessita de acordo expresso](https://www.jornaldenegocios.pt/economia/emprego/lei-laboral/detalhe/banco-de-horas-individual-regressa-com-adesao-tacita) do trabalhador. Atualmente, face ao salário-hora normal, as horas extraordinárias são pagas com 25% a mais na primeira hora, 37.5% a mais nas subsequentes e 50% por cada hora em dias de descanso. Estes acréscimos duplicam a partir das 100 horas extra anuais. Estas regras aplicam-se sempre que o trabalhador não esteja sob um banco de horas coletivo que estabeleça outras regras. Com o banco de horas individual proposto pelo governo, as horas extra poderiam ser devolvidas em descanso ou pagas pelo valor normal da hora - sem qualquer acréscimo. Para um trabalhador que receba o salário médio, esta medida poderia implicar uma perda de até €930 ao fim do ano<sup><sup>[\[1\]](#footnote-1)</sup></sup>.
+**1\. Pagamento de Horas Extraordinárias:** O pacote laboral proposto pelo governo prevê que empregadores estipulem até 150 horas extraordinárias por ano através de um banco de horas individual, que [não necessita de acordo expresso](https://www.jornaldenegocios.pt/economia/emprego/lei-laboral/detalhe/banco-de-horas-individual-regressa-com-adesao-tacita) do trabalhador. Atualmente, face ao salário-hora normal, as horas extraordinárias são pagas com 25% a mais na primeira hora, 37.5% a mais nas subsequentes e 50% por cada hora em dias de descanso. Estes acréscimos duplicam a partir das 100 horas extra anuais. Estas regras aplicam-se sempre que o trabalhador não esteja sob um banco de horas coletivo que estabeleça outras regras. Com o banco de horas individual proposto pelo governo, as horas extra poderiam ser devolvidas em descanso ou pagas pelo valor normal da hora - sem qualquer acréscimo. Para um trabalhador que receba o salário médio, esta medida poderia implicar uma perda de até €930 ao fim do ano[\[1\]](#footnote-1).
 
 **2\. Horários Longos:** Este banco de horas prevê também que o trabalho se possa estender até às 10 horas por dia e 50 horas semanais durante três meses e meio por ano. Se aprovada, os efeitos desta medida nos trabalhadores são expectáveis: A [ciência documenta](https://pmc.ncbi.nlm.nih.gov/articles/PMC8315652/) robustamente a associação entre horários longos e stress, fadiga, distúrbios do sono, doenças cardiovasculares e redução de produtividade por acidentes de trabalho. Mas as oito horas de trabalho diário são uma bandeira dos direitos laborais não apenas para nos proteger destes riscos, mas também porque uma vida justa exige oito horas para trabalhar, oito para dormir e oito para viver. Um direito reconhecido internacionalmente em documentos como o Tratado de Versalhes, a Convenção Fundadora da Organização Internacional do Trabalho e a Diretiva Europeia do Tempo de Trabalho.
 
