--- a/src/app/posts/64.md
+++ b/src/app/posts/64.md
@@ -2,7 +2,7 @@
 title: 'As greves e as estatísticas: um casamento pouco virtuoso'
 subtitle: ''
 date: '2025-12-09'
-author: "Henrique Sousa
+author: "Henrique Sousa"
 section: 'Greve Geral'
 ---
 
