--- a/src/app/posts/64.md
+++ b/src/app/posts/64.md
@@ -44,4 +44,4 @@ Quanto à greve geral, com a adesão confirmada de praticamente todos os sindica
 
 Recusando embarcar na manipulação instrumental de estatísticas nada rigorosas, aproveitemos para exigir que se construa um sistema mais confiável de informação sobre conflitos e relações laborais em Portugal, com a participação efectiva das organizações de trabalhadores. Certamente não eliminaria as diferentes e contraditórias leituras políticas das greves. Mas ajudaria na construção de relações colectivas de trabalho mais saudáveis.
 
-.
+Publicado originalmente no jornal Expresso de 9 de Dezembro de 2025
