--- a/src/app/posts/64.md
+++ b/src/app/posts/64.md
@@ -6,6 +6,8 @@ author: "Henrique Sousa"
 section: 'Greve Geral'
 ---
 
+![Créditos: José Soeiro](/images/grevegeralgrafitti.png)
+
 Os dados estatísticos oficiais sobre greves em Portugal são de má qualidade e não são confiáveis. O poder político tortura os números e a realidade.
 
 **Não há nenhum sistema consistente e rigoroso de recolha e tratamento estatístico global dos dados dos conflitos laborais em Portugal**. E o Relatório Único (RU) anual entregue pelos empregadores ao Ministério do Trabalho, sendo o mais importante retrato das relações laborais nas empresas, não é normalmente validado pelas organizações de trabalhadores, que são ignoradas no processo da sua elaboração e a quem é frequentemente recusado o acesso ou fornecida apenas informação truncada e parcial. Também continua a não existir a obrigação de elaboração de RU pelas organizações e serviços do Estado. A generalização do sistema de RU a todas as unidades, públicas e privadas, e a inclusão das organizações de trabalhadores no processo da sua elaboração, certamente elevaria a qualidade das estatísticas laborais em Portugal e dificultaria a sua instrumentalização.
