--- a/src/app/posts/58.md
+++ b/src/app/posts/58.md
@@ -3,7 +3,7 @@ title: 'Plataformas digitais: uma despresunção de laboralidade que é um 31…
 subtitle: ''
 date: '2025-11-15'
 author: "João Leal Amado"
-section: 'Plataformas Digitais'
+section: 'Contra-reforma laboral'
 ---
 
 ![Créditos: José Soeiro](/images/58.jpeg)
