--- a/src/app/posts/65.md
+++ b/src/app/posts/65.md
@@ -6,7 +6,7 @@ author: "Ricardo Paes Mamede"
 section: 'Contra-reforma laboral'
 ---
 
-![](/images/universita.jpg)
+![](/image/image004.png)
 
 A discussão sobre a revisão da legislação laboral regressa sempre com os mesmos argumentos: flexibilizar para criar emprego, adaptar as regras aos novos tempos, reduzir "custos de contexto". Por detrás destas palavras suaves, esconde-se quase sempre uma tentativa de enfraquecer a negociação colectiva. Isto não é apenas uma má ideia do ponto de vista da justiça social. É também uma estratégia que empurra o país na direcção errada em termos económicos.
 
