--- a/src/app/posts/67.md
+++ b/src/app/posts/67.md
@@ -10,6 +10,6 @@ Respondendo a um apelo da nossa revista, a Regina Guimarães fez três belíssim
 
 Consulta a nossa secção sobre a [contra-reforma laboral](https://www.mundosdotrabalho.pt/seccao/contra-reforma-laboral) e também o novo dossier sobre a [greve geral](https://www.mundosdotrabalho.pt/seccao/greve-geral).
 
-![](/images/regina1.jpg)
-![](/images/regina2.jpg)
-![](/images/regina3.jpg)
+![](/images/regina1.jpeg)
+![](/images/regina2.jpeg)
+![](/images/regina3.jpeg)
