--- a/src/app/posts/68.md
+++ b/src/app/posts/68.md
@@ -58,4 +58,4 @@ onde o amor se faz de arrojo e desassombro
 
 e se cumpre o sonho feito de luta e de razão.
 
-- Margarida Chagas Lopes
+Créditos: Margarida Chagas Lopes
