--- a/src/app/posts/70.md
+++ b/src/app/posts/70.md
@@ -1,5 +1,5 @@
 ---
-title: 'Contra o sinismo, a esperança'
+title: 'Contra o cinismo, a esperança'
 subtitle: ''
 date: '2025-12-18'
 author: "Manuel Carvalho da Silva"
