--- a/src/app/posts/73.md
+++ b/src/app/posts/73.md
@@ -1,5 +1,5 @@
 ---
-title: 'Confederação Europeia de Sindicatos e Confederação Sindical Internacional condem agressão miliar contra Venezuela e apelam à defesa do direito internacional'
+title: 'Sindicatos condenam agressão militar contra Venezuela'
 subtitle: ''
 date: '2026-01-21'
 author: ""
