--- a/src/app/posts/31.md
+++ b/src/app/posts/31.md
@@ -81,17 +81,12 @@ A âncora do projeto é um sítio online, repositório de textos e recursos, e u
 ## Design e paginação 
 - Francisco Soeiro
 
-## Fotografias
-- Ana Feijão
-- Ana Mendes
-- Paulete Matos
-
 ## Site
 - João Bernardo Narciso
 
 ## Apoio
-- Fundação Rosa Luxemburgo
-- SPGL
+- Fundação Rosa Luxemburgo (para o primeiro número)
+
 
 
  
