--- a/src/app/posts/202.md
+++ b/src/app/posts/202.md
@@ -6,7 +6,7 @@ author: "Catarina Reis de Oliveira"
 section: 'Trabalho e Imigração'
 ---
 
-![Créditos: Paulete Matos]](/images/202.jpg)
+![Créditos: Paulete Matos](/images/202.jpg)
 
 No contexto europeu, Portugal é um dos países de mais tardia transição
 migratória. Dominado pela sua experiência emigratória, assumiu saldos
